# internal/api/http/routes/submission.go
@@ -35,7 +35,19 @@ type SumbissionImpl struct {
 	queueService      service.QueueService
 }
 
-// Get requests
+// GetAll godoc
+//
+// @Tags			submission
+// @Summary		Get all submissions for the current user
+// @Description	Depending on the user role, this endpoint will return all submissions for the current user if user is student, all submissions to owned tasks if user is teacher, and all submissions in database if user is admin
+// @Produce		json
+// @Param 		limit	query	int false	"Limit the number of returned submissions"
+// @Param 		offset	query	int false	"Offset the returned submissions"
+// @Param Session header string true "Session Token"
+// @Success		200	{object}	httputils.ApiResponse[[]schemas.Submission]
+// @Failure		400	{object}	httputils.ApiError
+// @Failure		500	{object}	httputils.ApiError
+// @Router		/submission [get]
 func (s *SumbissionImpl) GetAll(w http.ResponseWriter, r *http.Request) {
 	if r.Method != http.MethodGet {
 		httputils.ReturnError(w, http.StatusMethodNotAllowed, "Method not allowed")
@@ -73,6 +85,18 @@ func (s *SumbissionImpl) GetAll(w http.ResponseWriter, r *http.Request) {
 	httputils.ReturnSuccess(w, http.StatusOK, submissions)
 }
 
+// GetById godoc
+//
+// @Tags			submission
+// @Summary		Get a submission by ID
+// @Description	Get a submission by its ID, if the user is a student, the submission must belong to the user, if the user is a teacher, the submission must belong to a task owned by the teacher, if the user is an admin, the submission can be any submission
+// @Produce		json
+// @Param 		id	path	int	true	"Submission ID"
+// @Param Session header string true "Session Token"
+// @Success		200	{object}	httputils.ApiResponse[schemas.Submission]
+// @Failure		400	{object}	httputils.ApiError
+// @Failure		500	{object}	httputils.ApiError
+// @Router		/submission/{id} [get]
 func (s *SumbissionImpl) GetById(w http.ResponseWriter, r *http.Request) {
 	if r.Method != http.MethodGet {
 		httputils.ReturnError(w, http.StatusMethodNotAllowed, "Method not allowed")
@@ -106,6 +130,21 @@ func (s *SumbissionImpl) GetById(w http.ResponseWriter, r *http.Request) {
 	httputils.ReturnSuccess(w, http.StatusOK, submission)
 }
 
+// GetAllForUser godoc
+//
+// @Tags			submission
+// @Summary		Get all submissions for a user
+// @Description Gets all submissions for specific user. If the user is a student, it fails with 403 Forbidden. For teacher it returns all submissions from this user for tasks owned by the teacher. For admin it returns all submissions for specific user.
+// @Produce		json
+// @Param 		id	path	int	true	"User ID"
+// @Param 		limit	query	int false	"Limit the number of returned submissions"
+// @Param 		offset	query	int false	"Offset the returned submissions"
+// @Param Session header string true "Session Token"
+// @Success		200	{object}	httputils.ApiResponse[[]schemas.Submission]
+// @Failure		400	{object}	httputils.ApiError
+// @Failure		403	{object}	httputils.ApiError
+// @Failure		500	{object}	httputils.ApiError
+// @Router		/submission/user/{id} [get]
 func (s *SumbissionImpl) GetAllForUser(w http.ResponseWriter, r *http.Request) {
 	if r.Method != http.MethodGet {
 		httputils.ReturnError(w, http.StatusMethodNotAllowed, "Method not allowed")
@@ -150,6 +189,21 @@ func (s *SumbissionImpl) GetAllForUser(w http.ResponseWriter, r *http.Request) {
 	httputils.ReturnSuccess(w, http.StatusOK, submissions)
 }
 
+// GetAllForUser godoc
+//
+// @Tags			submission
+// @Summary		Get all submissions for a group
+// @Description Gets all submissions for specific group. If the user is a student, it fails with 403 Forbidden. For teacher it returns all submissions from this group for tasks he created. For admin it returns all submissions for specific group.
+// @Produce		json
+// @Param 		id	path	int	true	"Group ID"
+// @Param 		limit	query	int false	"Limit the number of returned submissions"
+// @Param 		offset	query	int false	"Offset the returned submissions"
+// @Param Session header string true "Session Token"
+// @Success		200	{object}	httputils.ApiResponse[[]schemas.Submission]
+// @Failure		400	{object}	httputils.ApiError
+// @Failure		403	{object}	httputils.ApiError
+// @Failure		500	{object}	httputils.ApiError
+// @Router		/submission/user/{id} [get]
 func (s *SumbissionImpl) GetAllForGroup(w http.ResponseWriter, r *http.Request) {
 	if r.Method != http.MethodGet {
 		httputils.ReturnError(w, http.StatusMethodNotAllowed, "Method not allowed")
@@ -194,6 +248,21 @@ func (s *SumbissionImpl) GetAllForGroup(w http.ResponseWriter, r *http.Request) 
 	httputils.ReturnSuccess(w, http.StatusOK, submissions)
 }
 
+// GetAllForTask godoc
+//
+// @Tags			submission
+// @Summary		Get all submissions for a task
+// @Description Gets all submissions for specific task. If the user is a student and has no access to this task, it fails with 403 Forbidden. For teacher it returns all submissions for this task if he created it. For admin it returns all submissions for specific task.
+// @Produce		json
+// @Param 		id	path	int	true	"Task ID"
+// @Param 		limit	query	int false	"Limit the number of returned submissions"
+// @Param 		offset	query	int false	"Offset the returned submissions"
+// @Param Session header string true "Session Token"
+// @Success		200	{object}	httputils.ApiResponse[[]schemas.Submission]
+// @Failure		400	{object}	httputils.ApiError
+// @Failure		403	{object}	httputils.ApiError
+// @Failure		500	{object}	httputils.ApiError
+// @Router		/submission/task/{id} [get]
 func (s *SumbissionImpl) GetAllForTask(w http.ResponseWriter, r *http.Request) {
 	if r.Method != http.MethodGet {
 		httputils.ReturnError(w, http.StatusMethodNotAllowed, "Method not allowed")
@@ -238,6 +307,15 @@ func (s *SumbissionImpl) GetAllForTask(w http.ResponseWriter, r *http.Request) {
 	httputils.ReturnSuccess(w, http.StatusOK, submissions)
 }
 
+// GetAvailableLanguages godoc
+//
+// @Tags			submission
+// @Summary		Get all available languages
+// @Description	Get all available languages for submitting solutions. Temporary solutioon, while all tasks have same languages
+// @Produce		json
+// @Success		200	{object}	httputils.ApiResponse[[]schemas.Language]
+// @Failure		500	{object}	httputils.ApiError
+// @Router		/submission/languages [get]
 func (s *SumbissionImpl) GetAvailableLanguages(w http.ResponseWriter, r *http.Request) {
 	db := r.Context().Value(middleware.DatabaseKey).(database.Database)
 	tx, err := db.Connect()
@@ -253,7 +331,21 @@ func (s *SumbissionImpl) GetAvailableLanguages(w http.ResponseWriter, r *http.Re
 	httputils.ReturnSuccess(w, http.StatusOK, languages)
 }
 
-// Post requests
+// SubmitSolution godoc
+//
+// @Tags			submission
+// @Summary		Submit a solution
+// @Description	Submit a solution to a task, the solution is uploaded to the FileStorage service and a submission is created in the database. The submission is then published to the queue for processing. The response contains the submission ID. Fails if user has no access to provided task.
+// @Accept		multipart/form-data
+// @Produce		json
+// @Param 		taskID	form	int	true	"Task ID"
+// @Param 		solution form	file true	"Solution file"
+// @Param 		languageID	form	int	true	"Language ID"
+// @Param Session header string true "Session Token"
+// @Success		200	{object}	httputils.ApiResponse[schemas.SubmitResponse]
+// @Failure		400	{object}	httputils.ApiError
+// @Failure		403	{object}	httputils.ApiError
+// @Failure		500	{object}	httputils.ApiError
 func (s *SumbissionImpl) SubmitSolution(w http.ResponseWriter, r *http.Request) {
 	if r.Method != http.MethodPost {
 		httputils.ReturnError(w, http.StatusMethodNotAllowed, "Method not allowed")
